[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/LevelFin.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/evil_scientist.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/desk.png" type="Texture" id=3]
[ext_resource path="res://Levels/Environment/grass.tres" type="TileSet" id=4]
[ext_resource path="res://Levels/Environment/LockedDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Items/Key.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Art/key.png" type="Texture" id=8]
[ext_resource path="res://Items/Teleporter.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Art/dirt.png" type="Texture" id=10]
[ext_resource path="res://Characters/Rat.tscn" type="PackedScene" id=11]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 205.701, -30.6232, 0, 0, 0, 0, 203.987, -199.526 )
}

[node name="LevelFin" type="Node"]
script = ExtResource( 1 )

[node name="EvilPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="follow" type="PathFollow2D" parent="EvilPath"]
position = Vector2( 205.701, -30.6232 )
rotation = -1.58095
loop = false

[node name="Evil" type="Sprite" parent="EvilPath/follow"]
position = Vector2( -0.419159, -0.288494 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -260.642
margin_top = -140.61
margin_right = -160.642
margin_bottom = -80.6095
rect_scale = Vector2( 9.23053, 7.68881 )
texture = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 3, 0, 14, 3, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 65536, 0, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 0, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 0, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 0, 0, 131072, 0, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 0, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 0, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 0, 0, 196608, 0, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 0, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 0, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 0, 0, 262144, 0, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262148, 0, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 0, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 0, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 0, 0, 327680, 0, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327684, 0, 0, 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 327688, 0, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 0, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 0, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 0, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 0, 0, 393216, 0, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393220, 0, 0, 393221, 3, 0, 393222, 3, 0, 393223, 3, 0, 393224, 0, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 0, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 0, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 0, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 0, 0, 458752, 0, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 0, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 0, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 0, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 0, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 0, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 0, 0, 524288, 0, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 0, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 0, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 0, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 0, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 0, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 0, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 0, 0, 589824, 0, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 0, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589832, 0, 0, 589833, 3, 0, 589834, 3, 0, 589835, 3, 0, 589836, 0, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 0, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 0, 0, 589845, 3, 0, 589846, 3, 0, 589847, 3, 0, 589848, 0, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 0, 0, 655360, 0, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 0, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655368, 0, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 0, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 0, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 0, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 0, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 0, 0, 720896, 0, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 0, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 0, 0, 720905, 3, 0, 720906, 3, 0, 720907, 3, 0, 720908, 0, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 0, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 0, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 0, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 0, 0, 786432, 0, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 0, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 0, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 0, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 0, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 0, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 0, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 0, 0, 851968, 0, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 0, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 0, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 0, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 0, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 0, 0, 917504, 0, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 0, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 0, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 0, 0, 983040, 0, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 0, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 0, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 0, 0, 1048576, 0, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 0, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 0, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0 )

[node name="LockedDoor" parent="." instance=ExtResource( 5 )]
position = Vector2( 224.524, 6.88677 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 37.0777, -78.5907 )

[node name="Key" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.178963, -76.7267 )
texture = ExtResource( 8 )

[node name="Teleporter1" parent="." instance=ExtResource( 9 )]
position = Vector2( 314.973, 24.9834 )

[node name="dirt" type="Sprite" parent="Teleporter1"]
position = Vector2( 0.0133667, 0.745132 )
texture = ExtResource( 10 )

[node name="loc1" type="Node2D" parent="."]
position = Vector2( 332.12, -16.245 )

[node name="Rat" parent="." instance=ExtResource( 11 )]
position = Vector2( 99.5115, 148.621 )

[node name="Rat2" parent="." instance=ExtResource( 11 )]
position = Vector2( 427.77, 255.887 )
rotation = -1.31096

[node name="Rat3" parent="." instance=ExtResource( 11 )]
position = Vector2( 236.501, 37.4783 )
rotation = -1.3649

[connection signal="opened" from="LockedDoor" to="." method="_on_LockedDoor_opened"]
[connection signal="remove_message" from="Rat" to="." method="_on_Rat_remove_message"]
[connection signal="show_message" from="Rat" to="." method="_on_Rat_show_message"]
[connection signal="remove_message" from="Rat2" to="." method="_on_Rat_remove_message"]
[connection signal="show_message" from="Rat2" to="." method="_on_Rat2_show_message"]
[connection signal="remove_message" from="Rat3" to="." method="_on_Rat_remove_message"]
[connection signal="show_message" from="Rat3" to="." method="_on_Rat3_show_message"]
